<resources>
    <string name="app_name">Places_SER423</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="party_size_hint">Party size (max 99)</string>
    <string name="add_button_text">ADD PLACE</string>
    <string name="guest_name_hint">Place Name</string>
    <string name="default_place_name">[Place name]</string>
    <string name="default_place_id">\?</string>
    <string name="default_add_place">Add Place</string>
    <string name="base_place_name">Name</string>
    <string name="edit_place_name">New Place Name</string>
    <string name="base_place_description">Description</string>
    <string name="edit_place_description">New Place Description</string>
    <string name="base_place_category">Category</string>
    <string name="edit_place_category">New Place Category</string>
    <string name="base_place_address_title">Address Title</string>
    <string name="edit_place_address_title">New Address Title</string>
    <string name="base_place_address_street">Address Street</string>
    <string name="edit_place_address_street">New Address Street</string>
    <string name="base_place_elevation">Elevation</string>
    <string name="edit_place_elevation">New Place Elevation</string>
    <string name="base_place_latitude">Latitude</string>
    <string name="edit_place_latitude">New Place Latitude</string>
    <string name="base_place_longitude">Longitude</string>
    <string name="edit_place_longitude">New Place Longitude</string>
    <string name="distance_and_bearing_button">Dist and Heading</string>
    <string name="update_button">Update</string>
    <string name="delete_button">Delete</string>
    <string name="calculate_button">Calculate</string>
    <string name="from_place_text">From Place:</string>
    <string name="to_place_text">To Place:</string>
    <string name="distance_text">Distance (km):</string>
    <string name="distance_text_hint">Distance</string>
    <string name="heading_text">Heading (degrees):</string>
    <string name="heading_text_hint">Heading</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_sync">Sync</string>
    <string name="map_button">See Place in Map</string>
    <string name="new_map_place_spinner_text">Select a new Place in Map</string>
    <string name="refresh_map_button">Refresh Map</string>
    <string name="map_place_info_button">See Place Info</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_url">Server URL</string>
    <string name="pref_default_display_url">http://10.0.2.2:8080/</string>
    <string name="pref_default_display_name">Display Name</string>
    <string name="pref_title_display_name">Jason Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_maps">Map</string>


</resources>
