<?xml version="1.0" encoding="utf-8"?>
<!--
/**
* Copyright 2018 Jean Torres,
*
* Licensed under the Apache License, Version 2.0 (the "License");
* you may not use this file except in compliance with the License.
* You may obtain a copy of the License at
*
* http://www.apache.org/licenses/LICENSE-2.0
*
* Unless required by applicable law or agreed to in writing, software
* distributed under the License is distributed on an "AS IS" BASIS,
* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
* See the License for the specific language governing permissions and
* limitations under the License.
*
* Class to perform various earth surface calculations. Given lat/lon points
* this class can perform distance and bearing calculations - Great Circle,
* and Rhumb-line.
*
* Ser321 Principles of Distributed Software Systems
* see http://pooh.poly.asu.edu/Ser321
* @author Jean Torres jctorre8@asu.edu
* @version April, 2018
**/
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.asu.bsse.jctorre8.placesser423.PlaceInfoActivity">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayoutName">
        <TextView
            android:layout_marginBottom="4dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/base_place_name"
            android:id="@+id/place_name"/>
        <EditText
            android:layout_marginTop="4dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/edit_place_name"
            android:id="@+id/place_name_edit"
            android:layout_alignBottom="@+id/place_name"
            android:inputType="text" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayoutDescription"
        android:layout_below="@+id/relativeLayoutName">
        <TextView
            android:layout_marginBottom="4dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/base_place_description"
            android:id="@+id/place_description"/>
        <EditText
            android:layout_marginTop="4dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/edit_place_description"
            android:id="@+id/place_description_edit"
            android:layout_alignBottom="@+id/place_description"
            android:inputType="text" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayoutCategory"
        android:layout_below="@+id/relativeLayoutDescription">
        <TextView
            android:layout_marginBottom="4dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/base_place_category"
            android:id="@+id/place_category"/>
        <EditText
            android:layout_marginTop="4dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/edit_place_category"
            android:id="@+id/place_category_edit"
            android:layout_alignBottom="@+id/place_category"
            android:inputType="text" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayoutAddressTitle"
        android:layout_below="@+id/relativeLayoutCategory">
        <TextView
            android:layout_marginBottom="4dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/base_place_address_title"
            android:id="@+id/place_address_title"/>
        <EditText
            android:layout_marginTop="4dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/edit_place_address_title"
            android:id="@+id/place_address_title_edit"
            android:layout_alignBottom="@+id/place_address_title"
            android:inputType="text" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayoutAddressStreet"
        android:layout_below="@+id/relativeLayoutAddressTitle">
        <TextView
            android:layout_marginBottom="4dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/base_place_address_street"
            android:id="@+id/place_address_street"/>
        <EditText
            android:layout_marginTop="4dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/edit_place_address_street"
            android:id="@+id/place_address_street_edit"
            android:layout_alignBottom="@+id/place_address_street"
            android:inputType="text" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayoutElevation"
        android:layout_below="@+id/relativeLayoutAddressStreet">
        <TextView
            android:layout_marginBottom="4dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/base_place_elevation"
            android:id="@+id/place_elevation"/>
        <EditText
            android:layout_marginTop="4dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/edit_place_elevation"
            android:id="@+id/place_elevation_edit"
            android:layout_alignBottom="@+id/place_elevation"
            android:inputType="numberDecimal" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayoutLatitude"
        android:layout_below="@+id/relativeLayoutElevation">
        <TextView
            android:layout_marginBottom="4dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/base_place_latitude"
            android:id="@+id/place_latitude"/>
        <EditText
            android:layout_marginTop="4dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/edit_place_latitude"
            android:id="@+id/place_latitude_edit"
            android:layout_alignBottom="@+id/place_latitude"
            android:inputType="numberDecimal" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayoutLongitude"
        android:layout_below="@+id/relativeLayoutLatitude">
        <TextView
            android:layout_marginBottom="4dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/base_place_longitude"
            android:id="@+id/place_longitude"/>
        <EditText
            android:layout_marginTop="4dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/edit_place_longitude"
            android:id="@+id/place_longitude_edit"
            android:layout_alignBottom="@+id/place_longitude"
            android:inputType="numberDecimal" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="8dp"
        android:layout_below="@+id/relativeLayoutLongitude"
        android:id="@+id/relativeLayoutButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_marginStart="0sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnUpdate"
            android:text="@string/update_button"
            android:onClick="updatePlace"/>
        <Button
            android:layout_marginStart="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnDist"
            android:text="@string/distance_and_bearing_button"
            android:layout_toEndOf="@+id/btnUpdate"
            android:onClick="goDistanceAndBearing"/>
        <Button
            android:layout_marginStart="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnDelete"
            android:text="@string/delete_button"
            android:layout_toEndOf="@+id/btnDist"
            android:onClick="deletePlace"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="8dp"
        android:layout_below="@+id/relativeLayoutButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnMap"
            android:text="@string/map_button"
            android:onClick="goToMap"/>

    </RelativeLayout>

</RelativeLayout>