<?xml version="1.0" encoding="utf-8"?>
<!--
/**
* Copyright 2018 Jean Torres,
*
* Licensed under the Apache License, Version 2.0 (the "License");
* you may not use this file except in compliance with the License.
* You may obtain a copy of the License at
*
* http://www.apache.org/licenses/LICENSE-2.0
*
* Unless required by applicable law or agreed to in writing, software
* distributed under the License is distributed on an "AS IS" BASIS,
* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
* See the License for the specific language governing permissions and
* limitations under the License.
*
* Class to perform various earth surface calculations. Given lat/lon points
* this class can perform distance and bearing calculations - Great Circle,
* and Rhumb-line.
*
* Ser321 Principles of Distributed Software Systems
* see http://pooh.poly.asu.edu/Ser321
* @author Jean Torres jctorre8@asu.edu
* @version April, 2018
**/
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.asu.bsse.jctorre8.placesser423.DistanceBearingActivity">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayoutFromPlace">
        <TextView
            android:layout_marginBottom="4dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/from_place_text"
            android:id="@+id/from_place"/>
        <EditText
            android:layout_marginTop="4dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/from_place_text"
            android:id="@+id/from_place_name"
            android:layout_alignBottom="@+id/from_place"
            android:inputType="text" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayoutToPlace"
        android:layout_below="@+id/relativeLayoutFromPlace">
        <TextView
            android:layout_marginBottom="4dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/to_place_text"
            android:id="@+id/to_places"/>
        <Spinner
            android:layout_marginTop="4dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/htmlSilver"
            android:text="@string/to_place_text"
            android:id="@+id/to_places_spinner"
            android:layout_alignBottom="@+id/to_places"
            android:inputType="text" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayoutDistance"
        android:layout_below="@+id/relativeLayoutToPlace">
        <TextView
            android:layout_marginBottom="4dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/distance_text"
            android:id="@+id/from_distance"/>
        <EditText
            android:layout_marginTop="4dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/distance_text_hint"
            android:id="@+id/from_distance_edit"
            android:layout_alignBottom="@+id/from_distance"
            android:inputType="numberDecimal" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayoutAddressHeading"
        android:layout_below="@+id/relativeLayoutDistance">
        <TextView
            android:layout_marginBottom="4dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/heading_text"
            android:id="@+id/from_heading"/>
        <EditText
            android:layout_marginTop="4dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/heading_text_hint"
            android:id="@+id/from_heading_edit"
            android:layout_alignBottom="@+id/from_heading"
            android:inputType="numberDecimal" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="8dp"
        android:layout_below="@+id/relativeLayoutAddressHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/btnUpdate"
            android:text="@string/calculate_button"
            android:onClick="calculateDistAndHead"/>

    </RelativeLayout>

</RelativeLayout>