<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.asu.bsse.jctorre8.placesser423.MapsActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayoutNewMapPlace">
        <TextView
            android:layout_marginBottom="4dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/new_map_place_spinner_text"
            android:id="@+id/map_places"/>
        <Spinner
            android:layout_marginTop="4dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/htmlSilver"
            android:text="@string/new_map_place_spinner_text"
            android:id="@+id/new_map_place_spinner"
            android:layout_alignBottom="@+id/map_places"
            android:inputType="text" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="8dp"
        android:layout_below="@+id/relativeLayoutNewMapPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayoutMap">

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:map="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="410dp"
            tools:context=".MapsActivity" />

    </RelativeLayout>
    <RelativeLayout
    android:layout_marginTop="8dp"
    android:layout_below="@+id/relativeLayoutMap"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <Button
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnRefreshMap"
            android:text="@string/refresh_map_button"
            android:onClick="refreshMap"/>
        <Button
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnMapPlaceInfo"
            android:text="@string/map_place_info_button"
            android:onClick="toPlaceInfo"/>
    </RelativeLayout>

</RelativeLayout>

